<resources>
    <string name="app_name">优酷AV</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="enter">点击进入</string>
    <string name="server_status_start">正在获取服务器配置</string>
    <string name="server_status_end">获取服务器配置成功</string>
    <string name="url_err">链接失败，请稍后再试</string>
    <string name="bottom_mv">MV</string>
    <string name="video">小视频</string>
    <string name="classify">分类</string>
    <string name="collect">收藏</string>
    <string name="my">我的</string>
    <string name="install_now">立即安装</string>
    <string name="renewal_vip">续约VIP</string>
    <string name="buy_vip">购买会员</string>
    <string name="buy_vip2">升级VIP会员</string>
    <string name="account">账号</string>
    <string name="change_bind_account">变更绑定账号</string>
    <string name="change_psw">变更密码</string>
    <string name="complaint_line">申述专线</string>
    <string name="change_account">切换账号</string>
    <string name="bind_account">绑定手机</string>
    <string name="share">分享推广</string>
    <string name="problem_advise">问题与建议</string>
    <string name="policies_provisions">政策与条款</string>
    <string name="project_management">方案管理</string>
    <string name="change_account_alert">切换账号有可能遗失您原本登入的账号，建议切换前绑定您的账号</string>
    <string name="cancle">取消</string>
    <string name="confirm">确认</string>
    <string name="confirm2">确定</string>
    <string name="email_login">电子信箱登入</string>
    <string name="email">邮箱</string>
    <string name="input_email">请输入您的信箱</string>
    <string name="input_psw">请输入密码(6位以上)</string>
    <string name="input_psw_old">请输入旧密码(6位以上)</string>
    <string name="input_psw_new">请输入旧密码(6位以上)</string>
    <string name="password">密码</string>
    <string name="login">登入</string>
    <string name="phone_login">手机登入</string>
    <string name="forget_psw">忘记密码</string>
    <string name="input_phone">输入您的手机号码</string>
    <string name="phone">手机</string>
    <string name="email_error">信箱格式不正确</string>
    <string name="phone_error">手机号码格式不正确</string>
    <string name="phone_email_error">手机号码或信箱格式不正确</string>
    <string name="congratulation">恭喜</string>
    <string name="login_successed">登入成功</string>
    <string name="phone_email">手机或信箱</string>
    <string name="input_phone_emial">请输入您的手机号码或信箱</string>
    <string name="old_password">旧密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="psw_unlike">两次输入的密码不一致</string>
    <string name="bind_email">绑定信箱</string>
    <string name="phone_bind">手机绑定</string>
    <string name="bind_show_email">没有电子信箱？使用</string>
    <string name="input_psw_again">请再次输入密码(6位以上)</string>
    <string name="email_bind">电子邮箱绑定</string>
    <string name="bind_show_phone">没有手机？使用</string>
    <string name="bind_successed">绑定成功</string>
    <string name="bind_phone">绑定手机</string>
    <string name="send">送出</string>
    <string name="change_bing_alert">为了确保本人持有，请先输入您的账号密码</string>
    <string name="no_order">尚无订单记录！</string>
    <string name="open_vip">立即升级VIP</string>
    <string name="current_project">目前方案</string>
    <string name="current_project_des">方案进行中</string>
    <string name="current_project_name">方案名称</string>
    <string name="current_project_period_validity">有效期限</string>
    <string name="current_project_buy_type">付款方式</string>
    <string name="current_project_auto_deduction">自动扣款</string>
    <string name="history_order">历史订单</string>
    <string name="gross_amount">总额</string>
    <string name="yuan">元</string>
    <string name="input_video_id">请输入mv番号</string>
    <string name="terms_for_usage">使用条款</string>
    <string name="privacy_policy">隐私权保护政策</string>
    <string name="setter">设定</string>
    <string name="psw_lock">密码锁</string>
    <string name="autoplay">自动播放</string>
    <string name="version">当前版本：</string>
    <string name="newest">最新</string>
    <string name="hotest2">热门</string>
    <string name="rank_list">排行</string>
    <string name="variety_show">综艺</string>
    <string name="exclusive">独家</string>
    <string name="hotest">热销</string>
    <string name="recommend">推荐</string>
    <string name="recommend2">力荐</string>
    <string name="mv">MV</string>
    <string name="star">明星</string>
    <string name="search_hint">搜索影片名称</string>
    <string name="filtrate">筛选</string>
    <string name="free">限免</string>
    <string name="search">搜索</string>
    <string name="empty_message">暂无相关内容</string>
    <string name="look_more">查看跟多影片</string>
    <string name="no_collect">您还未收藏任何影片</string>
    <string name="synopsis">简介</string>
    <string name="collect_video">收藏影片</string>
    <string name="video_line">海外线路1</string>
    <string name="video_problem">问题回报</string>
    <string name="show_stars">演出明星</string>
    <string name="about_video">相关影片</string>
    <string name="star_introduce">明星介绍</string>
    <string name="other_hot_classify">其他热门标签</string>
    <string name="login_fail">登录初始化失败</string>
    <string name="vip_time_limit">期限：%s</string>
    <string name="my_document">亚洲最强看片神器！美国MV本土视频天天更新看到爽</string>
    <string name="look_more_star">查看更多明星</string>
    <string name="star_production">作品：%d</string>
    <string name="star_usercount">人气：%d</string>
    <string name="star_production2">所有作品：%d</string>
    <string name="issue_date">%s 发行</string>
    <string name="star_num">共%d位</string>
    <string name="rmb_pay">人民币付费</string>
    <string name="buy_vip_text_1">所有方案皆可全站无线观看</string>
    <string name="buy_vip_text_2">支付后系统将会于五分钟后自动开通VIP\n请重新启动APP</string>
    <string name="buy_vip_text_3">支付通道如有堵塞，请稍后尝试...</string>
    <string name="buy_year">全站一年¥RMB</string>
    <string name="buy_year_des">限时优惠加码送1个月</string>
    <string name="upgrade">升级</string>
    <string name="buy_month">全站包月¥RMB</string>
    <string name="buy_month_des">30天无限观看，专属VIP路线和资源，每周5部影片下载</string>
    <string name="buy_quarter_des">90天无限观看，专属VIP路线和资源，每周8部影片下载</string>
    <string name="buy_yead_des">365天无限观看，专属VIP路线和资源，每周12部影片下载</string>
    <string name="buy_half_year">全站半年¥RMB</string>
    <string name="buy_easy">安心购买</string>
    <string name="buy_easy_1">1.在信用卡账单上，并不会限时您所使用的服务或网站名称</string>
    <string name="buy_easy_2">2.会员资料及线上交易之信息，采用最高SSL加密技术委使用者资料及 线上交易安全做把关，网站资安，安全无虞。</string>
    <string name="buy_easy_3">3.支付后系统将会自动开通，所有消费明细在您的订单记录里可以查看 若有问题请联系客服！</string>
    <string name="vip_show_3">高清细致\n细节不错过</string>
    <string name="vip_show_1">天天更新\n全站无限看</string>
    <string name="vip_show_2">线路更换\n看片更快一步</string>
    <string name="renew">续费</string>
    <string name="video_alert_1">本视频可免费观看</string>
    <string name="one_minute">1分钟</string>
    <string name="try_one_minute">试看1分钟！</string>
    <string name="video_alert_2">观看完整版请升级vip</string>
    <string name="choose_project">您选择的方案</string>
    <string name="choose_pay_way">您选择的付款方式</string>
    <string name="alipay">支付宝</string>
    <string name="wechat">微信</string>
    <string name="pay_type_year">全站包年</string>
    <string name="pay_type_half_year">全站包季度</string>
    <string name="pay_type_month">全站包月</string>
    <string name="rmb">RMB¥%d</string>
    <string name="share_1">开启追剧之旅</string>
    <string name="share_2">截图分享二维码或点击分享推广链接发送给好友，好友（新用户）下载成功即可增加你的每日看剧次数，好友充值你还能获得充值返利</string>
    <string name="share_3">分享推广链接</string>
    <string name="share_4">======友情提示======</string>
    <string name="share_5">1.请妥善保管自己的账号和推广码\n2.若出现好友下载成功后，推广次数增加的情况，请让好友在“我的”页面通过输入的邀请码来建立邀请关系。</string>
    <string name="share_6">======推广福利======</string>
    <string name="share_7">1.成功推广1人，每日有3次追剧次数\n2.成功推广3人，每日有10次追剧次数\n3.成功推广10人，每日有无限次追剧次数</string>
    <string name="splash_1">最新公告</string>
    <string name="splash_2">【绑定账号】不但能提高账号安全性，更能让您在发生意外时轻松找回您的账号哦~请至会员中心绑定！</string>
    <string name="splash_3">扫一扫微信，加关注</string>
    <string name="residue_num">每日追剧次数</string>
    <string name="no_star">您还未收藏任何明星</string>
    <string name="no">否</string>
    <string name="pay_time">交易日期</string>
    <string name="share_to">分享至</string>
    <string name="pyq">朋友圈</string>
    <string name="qq">QQ</string>
    <string name="high_definition">高清</string>
    <string name="standard_definition">标清</string>
    <string name="change_definition">切换中...</string>
    <string name="setter_psw">设置密码锁</string>
    <string name="inupt_psw">请输入4位密码</string>
    <string name="inupt_psw_again">请再次输入4位密码</string>
    <string name="set_psw_successed">设置密码成功</string>
    <string name="psw_error">密码不正确</string>
    <string name="share_content">  独家资源 http://qg99.tv</string>
    <string name="advertising_des">点击广告可临时增加追剧次数，最多提升三次</string>
    <string name="buy_vip3">购买会员</string>
    <string name="show_head_1">无限观看</string>
    <string name="proxy">代理招募</string>
    <string name="show_head_2">返利高达30%</string>
    <string name="show_head_3">余额：元</string>
    <string name="withdraw_deposit">提现</string>
    <string name="show_head_4">已推广人</string>
    <string name="find_account">找回账号</string>
    <string name="coded_lock">安全码设置</string>
    <string name="request_video">MV番号求片</string>
    <string name="history_watch">播放历史</string>
    <string name="download">下载管理</string>
    <string name="invitation_code">输入邀请码</string>
    <string name="customer_services">在线客服</string>
    <string name="car_crowd">开车群</string>
    <string name="vip_month">月卡</string>
    <string name="price_month">30.00元</string>
    <string name="buy_now">立即购买</string>
    <string name="price_quarter">68.00元</string>
    <string name="vip_quarter">季卡</string>
    <string name="vip_year">年卡</string>
    <string name="price_yead">268.00元</string>
    <string name="up_watch_number">提升每日看片次数</string>
    <string name="clear">清除</string>
    <string name="current_account">当前账号：%s</string>
    <string name="current_account_show">输入新账号立即更换</string>
    <string name="input_account">输入新账号</string>
    <string name="input_safe_code">如未设置安全码不需要填写</string>
    <string name="updata">提交</string>
    <string name="phone_number">手机号</string>
    <string name="code">验证码</string>
    <string name="input_phone2">输入手机号</string>
    <string name="input_code">输入验证码</string>
    <string name="input_code2">请输入验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="hint">提示</string>
    <string name="know">知道了</string>
    <string name="set_coded_lock">安全码设置</string>
    <string name="input_coded_lock">请输入安全码，由6-16位数字组成</string>
    <string name="coded_lock_setted">已设置</string>
    <string name="change_coded_lock">修改安全码</string>
    <string name="coded_lock_alert">安全码用途：提现时需要输入安全码才能操作，所以请妥善保管，不要透漏给其他人。丢失或忘记无法找回。</string>
    <string name="coded_lock_hint">请妥善保管您的安全码，不要泄露给他人，确认设置？</string>
    <string name="your_qrcode">您的二维码信息：</string>
    <string name="copy">复制</string>
    <string name="permission_camera_rationale">请在设置中打开照相机权限</string>
    <string name="permission_writeexternalstorage_rationale">请在设置中打开读写内存卡权限</string>
    <string name="input_invitation_code">输入邀请码</string>
    <string name="input_invitation_code3">请输入邀请码</string>
    <string name="input_invitation_code2">输入邀请人的邀请码，请注意大小写</string>
    <string name="pay">支付</string>
    <string name="after_pay">付款成功后，请妥善保管自己的账号码，2-3分钟之后重启APP即可获得会员身份</string>
    <string name="balance_pay">余额付款</string>
    <string name="alipay_pay">支付宝支付</string>
    <string name="coded_lock_successed">安全码设置成功，您的安全码是%s</string>
    <string name="achievements">总业绩：%s元</string>
    <string name="balance">余额：%s元</string>
    <string name="proxy_1">一级推广</string>
    <string name="proxy_2">二级推广</string>
    <string name="proxy_4">四级推广</string>
    <string name="proxy_3">三级推广</string>
    <string name="withdrawal_record">提现记录</string>
    <string name="returns_detailed">收益明细</string>
    <string name="bink_card">银行卡</string>
    <string name="withdraw_deposit_way">提现方式</string>
    <string name="withdraw_deposit_charge">提现手续费</string>
    <string name="name_of_payee">收款人姓名</string>
    <string name="input_name_of_payee">请输入收款人姓名</string>
    <string name="withdrawdeposit_des">余额来源：当别人（注：新用户）通过输入你的邀请码即可建立邀请关系，每次他购买会员都会返利给你</string>
</resources>