<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:gravity="center"
        android:text="@string/share_to"
        android:textColor="@color/c_313842"
        android:textSize="17sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/x120"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_wechat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/share_wechat"
            android:drawablePadding="@dimen/x10"
            android:gravity="center"
            android:paddingTop="@dimen/x10"
            android:paddingBottom="@dimen/x10"
            android:text="@string/wechat"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_pyq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/share_pyq"
            android:drawablePadding="@dimen/x10"
            android:gravity="center"
            android:paddingTop="@dimen/x10"
            android:paddingBottom="@dimen/x10"
            android:text="@string/pyq"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_qq"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/share_qq"
            android:drawablePadding="@dimen/x10"
            android:gravity="center"
            android:paddingTop="@dimen/x10"
            android:paddingBottom="@dimen/x10"
            android:text="@string/qq"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/x1"
        android:background="@color/c_f6f6f6" />

    <TextView
        android:id="@+id/tv_cancle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/x45"
        android:gravity="center"
        android:text="@string/cancle"
        android:textColor="@color/c_313842"
        android:textSize="15sp" />

</LinearLayout>